<resources>
    <string name="app_name">f1Api</string>
    <string name="title_news">Noticias</string>
    <string name="title_drivers">Pilotos</string>
    <string name="title_teams">Equipos</string>
    <string name="title_circuits">Circuitos</string>
    <string name="title_classification">Clasificacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>