<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_drivers"
        android:icon="@drawable/casco"
        android:title="@string/title_drivers" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/f1"
        android:title="@string/title_teams" />
    <item
        android:id="@+id/navigation_circuits"
        android:icon="@drawable/circuito"
        android:title="@string/title_circuits"/>
    <item
        android:id="@+id/navigation_classification"
        android:icon="@drawable/ranking"
        android:title="@string/title_classification" />

</menu>